[tool.poetry]
name = "hls"
version = "0.0.1"
description = ""
authors = ["pgmystery"]
readme = "README.md"
packages = [{include = "HLS"}]

[tool.poetry.dependencies]
python = "^3.10"
pyav = "^12.0.5"
m3u8 = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
